# ChangeLog for app-emulation/wine
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/wine/ChangeLog,v 1.213 2008/05/24 15:38:40 vapier Exp $

*wine-1.0_rc2 (24 May 2008)

  24 May 2008; Mike Frysinger <vapier@gentoo.org> +wine-1.0_rc2.ebuild:
  Version bump.

*wine-1.0_rc1 (10 May 2008)

  10 May 2008; Mike Frysinger <vapier@gentoo.org> +wine-1.0_rc1.ebuild:
  Version bump.

*wine-0.9.61 (02 May 2008)

  02 May 2008; Mike Frysinger <vapier@gentoo.org> +wine-0.9.61.ebuild:
  Version bump.

  19 Apr 2008; Mike Frysinger <vapier@gentoo.org> wine-0.9.59.ebuild,
  wine-0.9.60.ebuild:
  Wine now ships with compiled fonts, so dont need fontforge #216323 by
  Giacomo Perale.

*wine-0.9.60 (18 Apr 2008)

  18 Apr 2008; Mike Frysinger <vapier@gentoo.org> +wine-0.9.60.ebuild:
  Version bump.

*wine-0.9.59 (04 Apr 2008)

  04 Apr 2008; Mike Frysinger <vapier@gentoo.org> +wine-0.9.59.ebuild:
  Version bump.

*wine-0.9.58 (22 Mar 2008)

  22 Mar 2008; Mike Frysinger <vapier@gentoo.org> +wine-0.9.58.ebuild:
  Version bump.

*wine-0.9.57 (08 Mar 2008)

  08 Mar 2008; Mike Frysinger <vapier@gentoo.org> +wine-0.9.57.ebuild:
  Version bump.

  23 Feb 2008; Mike Frysinger <vapier@gentoo.org> wine-0.9.9.ebuild,
  wine-0.9.10.ebuild, wine-0.9.11.ebuild, wine-0.9.12.ebuild,
  wine-0.9.13.ebuild, wine-0.9.14.ebuild, wine-0.9.15.ebuild,
  wine-0.9.16.ebuild, wine-0.9.17.ebuild, wine-0.9.18.ebuild,
  wine-0.9.19.ebuild, wine-0.9.20.ebuild, wine-0.9.21.ebuild,
  wine-0.9.22.ebuild, wine-0.9.23.ebuild, wine-0.9.24.ebuild,
  wine-0.9.25.ebuild, wine-0.9.26.ebuild, wine-0.9.27.ebuild,
  wine-0.9.28.ebuild, wine-0.9.29.ebuild, wine-0.9.30.ebuild,
  wine-0.9.31.ebuild, wine-0.9.32.ebuild, wine-0.9.33.ebuild,
  wine-0.9.34.ebuild, wine-0.9.35.ebuild, wine-0.9.36.ebuild,
  wine-0.9.37.ebuild, wine-0.9.38.ebuild, wine-0.9.39.ebuild,
  wine-0.9.40.ebuild, wine-0.9.41.ebuild, wine-0.9.42.ebuild,