@@ -1,6 +1,9 @@
 # ChangeLog for app-emulation/wine
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/wine/ChangeLog,v 1.213 2008/05/24 15:38:40 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/wine/ChangeLog,v 1.214 2008/05/25 00:36:35 vapier Exp $
+
+  25 May 2008; Mike Frysinger <vapier@gentoo.org> wine-1.0_rc2.ebuild:
+  Make the amd64 binaries depend on USE=X #223267 by James Pic.
 
 *wine-1.0_rc2 (24 May 2008)
 
